plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'at.fhv'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Publication Organizer Application'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
	maven { url = 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// validation support
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'org.postgresql:postgresql'

    // Spring Security for PasswordEncoder
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // testing support
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation "org.junit.jupiter:junit-jupiter:5.11.0"
	testImplementation "org.junit.platform:junit-platform-suite:1.14.0"
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.session:spring-session-jdbc'

}

tasks.named('test') {
	useJUnitPlatform()
}
